refactor(consensus): TopologyObserver reads snapshot only, no nodeStatesById fallback